tests/snapshots/formats__gpt__efi-swap.img.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ efi-swap.img — GPT disk, 3 partitions, 512-byte sectors, 46.5 KiB  [0x0+0xba00]
  ▾ Protective MBR  [0x0+0x200]
      Bootstrap code  [0x0+0x1b8]
    ▾ Entry 1 — GPT protective (0xee), 46 KiB at LBA 1  [0x1be+0x10]
        Boot indicator: inactive (0x0)  [0x1be+0x1]
        First sector (CHS): fe ff ff  |...| — C/H/S 1023/254/63  [0x1bf+0x3]
        Partition type: GPT protective (0xee)  [0x1c2+0x1]
        Last sector (CHS): fe ff ff  |...| — C/H/S 1023/254/63  [0x1c3+0x3]
        First sector (LBA): 1  [0x1c6+0x4]
        Sectors: 92 — 46 KiB  [0x1ca+0x4]
    ▾ Entry 2 — unused  [0x1ce+0x10]
        Boot indicator: inactive (0x0)  [0x1ce+0x1]
        First sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1cf+0x3]
        Partition type: Empty (0x0)  [0x1d2+0x1]
        Last sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1d3+0x3]
        First sector (LBA): 0  [0x1d6+0x4]
        Sectors: 0 — 0 bytes  [0x1da+0x4]
    ▾ Entry 3 — unused  [0x1de+0x10]
        Boot indicator: inactive (0x0)  [0x1de+0x1]
        First sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1df+0x3]
        Partition type: Empty (0x0)  [0x1e2+0x1]
        Last sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1e3+0x3]
        First sector (LBA): 0  [0x1e6+0x4]
        Sectors: 0 — 0 bytes  [0x1ea+0x4]
    ▾ Entry 4 — unused  [0x1ee+0x10]
        Boot indicator: inactive (0x0)  [0x1ee+0x1]
        First sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1ef+0x3]
        Partition type: Empty (0x0)  [0x1f2+0x1]
        Last sector (CHS): 00 00 00  |...| — C/H/S 0/0/0  [0x1f3+0x3]
        First sector (LBA): 0  [0x1f6+0x4]
        Sectors: 0 — 0 bytes  [0x1fa+0x4]
      Boot signature  [0x1fe+0x2]
  ▾ GPT header — 16 entries at LBA 2  [0x200+0x5c]
      Signature: "EFI PART"  [0x200+0x8]
      Revision: 0x10000 — 1.0  [0x208+0x4]
      Header size: 92  [0x20c+0x4]
      Header CRC32: 0x85e1d634  [0x210+0x4]
      Reserved: 0  [0x214+0x4]
      This header's LBA: 1  [0x218+0x8]
      Alternate header's LBA: 92  [0x220+0x8]
      First usable LBA: 6  [0x228+0x8]
      Last usable LBA: 87  [0x230+0x8]
      Disk GUID: {6a1c2b3d-4e5f-4a6b-8c7d-9e0f1a2b3c4d}  [0x238+0x10]
      Partition entries LBA: 2  [0x248+0x8]
      Number of partition entries: 16  [0x250+0x4]
      Size of a partition entry: 128  [0x254+0x4]
      Partition entries CRC32: 0x7ec73363  [0x258+0x4]
  ▾ Partition entries — 3 used of 16  [0x400+0x800]
    ▾ Partition 1: EFI system partition — EFI System, 24 KiB at LBA 8  [0x400+0x80]
      ▾ Entry  [0x400+0x80]
          Partition type GUID: {c12a7328-f81f-11d2-ba4b-00a0c93ec93b} — EFI System  [0x400+0x10]
          Unique partition GUID: {00000000-0000-0000-0000-000012340000}  [0x410+0x10]
          First LBA: 8  [0x420+0x8]
          Last LBA (inclusive): 55  [0x428+0x8]
          Attributes: 0x1 [PLATFORM_REQUIRED]  [0x430+0x8]
          Partition name: "EFI system partition"  [0x438+0x48]
      ▾ Volume — FAT12 filesystem "EFI", 24 KiB, 44 clusters of 512 bytes  [0x1000+0x6000]
        ▾ Boot sector (BPB) — OEM "MSWIN4.1"  [0x1000+0x200]
            Jump instruction: eb 3c 90  |.<.|  [0x1000+0x3]
            OEM name: "MSWIN4.1"  [0x1003+0x8]
            Bytes per sector: 512  [0x100b+0x2]
            Sectors per cluster: 1  [0x100d+0x1]
            Reserved sectors: 1  [0x100e+0x2]
            Number of FATs: 2  [0x1010+0x1]
            Root directory entries: 16  [0x1011+0x2]
            Total sectors (16-bit): 48  [0x1013+0x2]
            Media descriptor: fixed disk (0xf8)  [0x1015+0x1]
            Sectors per FAT (FAT12/16): 1  [0x1016+0x2]
            Sectors per track: 32  [0x1018+0x2]
            Heads: 2  [0x101a+0x2]
            Hidden sectors: 0  [0x101c+0x4]
            Total sectors (32-bit): 0  [0x1020+0x4]
        ▾ Extended BPB  [0x1024+0x1a]
            Drive number: 0x80  [0x1024+0x1]
            Reserved: 0  [0x1025+0x1]
            Extended boot signature: 0x29  [0x1026+0x1]
            Volume serial number: 0x1234abcd  [0x1027+0x4]
            Volume label: "EFI        "  [0x102b+0xb]
            Filesystem type: "FAT12   "  [0x1036+0x8]
        ▾ FAT 1 — FAT12 entries  [0x1200+0x200]
            Cluster 2 — end of chain → 0x1800+0x200
            Clusters 3–45 — free
          FAT 2 — copy  [0x1400+0x200]
        ▾ Root directory  [0x1600+0x200]
            Volume label: "EFI"  [0x1600+0x20]
          ▾ README.TXT — 14 bytes, modified 2024-05-17 13:37:42  [0x1620+0x20]
            ▾ Directory entry  [0x1620+0x20]
                Short name: "README.TXT"  [0x1620+0xb]
                Attributes: 0x20 [ARCHIVE]  [0x162b+0x1]
                Case flags (NT): 0x0 []  [0x162c+0x1]
                Creation time, 10 ms units: 100  [0x162d+0x1]
                Created: 2024-05-17 13:37:42 UTC  [0x162e+0x4]
                Accessed: 2024-05-17 00:00:00 UTC  [0x1632+0x2]
                First cluster (high word): 0  [0x1634+0x2]
                Modified: 2024-05-17 13:37:42 UTC  [0x1636+0x4]
                First cluster (low word): 2  [0x163a+0x2]
                File size: 14 — 14 bytes  [0x163c+0x4]
            ▾ Clusters — contiguous, 14 bytes
                Fragment 0 — file offset 0x0, 14 bytes  [0x1800+0xe]
            ▾ Content — UTF-8 text, LF line endings, 1 line  [0x1800+0xe]
                Encoding: "UTF-8"
                Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
              ▾ Lines — 1 line  [0x1800+0xe]
                  Line 1: "partition one"  [0x1800+0xd]
          Data region — 22 KiB  [0x1800+0x5800]
    ▾ Partition 2: swap — Linux swap, 12 KiB at LBA 56  [0x480+0x80]
      ▾ Entry  [0x480+0x80]
          Partition type GUID: {0657fd6d-a4ab-43c4-84e5-0933c84b4f4f} — Linux swap  [0x480+0x10]
          Unique partition GUID: {00000000-0000-0000-0000-000012340001}  [0x490+0x10]
          First LBA: 56  [0x4a0+0x8]
          Last LBA (inclusive): 79  [0x4a8+0x8]
          Attributes: 0x0 []  [0x4b0+0x8]
          Partition name: "swap"  [0x4b8+0x48]
      ▾ Volume — Linux swap v1 "gptswap", 12 KiB (3 pages of 4 KiB)  [0x7000+0x3000]
          Boot bits  [0x7000+0x400]
        ▾ Header  [0x7400+0x2c]
            Version: 1  [0x7400+0x4]
            Last page: 2  [0x7404+0x4]
            Bad pages: 0  [0x7408+0x4]
            UUID: "8a7b6c5d-4e3f-4a2b-9c1d-0e1f2a3b4c5d"  [0x740c+0x10]
            Label: "gptswap"  [0x741c+0x10]
          Signature: "SWAPSPACE2"  [0x7ff6+0xa]
          Swap pages — 8 KiB  [0x8000+0x2000]
    ▾ Partition 3: Basic data — Microsoft basic data, 4 KiB at LBA 80  [0x500+0x80]
      ▾ Entry  [0x500+0x80]
          Partition type GUID: {ebd0a0a2-b9e5-4433-87c0-68b6b72699c7} — Microsoft basic data  [0x500+0x10]
          Unique partition GUID: {00000000-0000-0000-0000-000012340002}  [0x510+0x10]
          First LBA: 80  [0x520+0x8]
          Last LBA (inclusive): 87  [0x528+0x8]
          Attributes: 0xc000000000000000 [HIDDEN (Microsoft) | NO_DRIVE_LETTER (Microsoft)]  [0x530+0x8]
          Partition name: "Basic data"  [0x538+0x48]
      ▾ Volume  [0xa000+0x1000]
          ! unsupported: unrecognized format [0xa000+0x1000]
  ▾ Backup GPT header — at LBA 92  [0xb800+0x5c]
      Signature: "EFI PART"  [0xb800+0x8]
      Revision: 0x10000 — 1.0  [0xb808+0x4]
      Header size: 92  [0xb80c+0x4]
      Header CRC32: 0xb4b8e9e8  [0xb810+0x4]
      Reserved: 0  [0xb814+0x4]
      This header's LBA: 92  [0xb818+0x8]
      Alternate header's LBA: 1  [0xb820+0x8]
      First usable LBA: 6  [0xb828+0x8]
      Last usable LBA: 87  [0xb830+0x8]
      Disk GUID: {6a1c2b3d-4e5f-4a6b-8c7d-9e0f1a2b3c4d}  [0xb838+0x10]
      Partition entries LBA: 88  [0xb848+0x8]
      Number of partition entries: 16  [0xb850+0x4]
      Size of a partition entry: 128  [0xb854+0x4]
      Partition entries CRC32: 0x7ec73363  [0xb858+0x4]
