tests/snapshots/formats__gpt__sgdisk.img.raw.zst.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ sgdisk.img — GPT disk, 5 partitions, 512-byte sectors, 2.0 MiB, disk GUID {11111111-2222-3333-4444-555555555555}  [0x0+0x200000]
  ▾ Protective MBR — protective MBR  [0x0+0x200]
      Bootstrap code — empty  [0x0+0x1b8]
      Disk signature: 0x0  [0x1b8+0x4]
      Copy protection: 0x0  [0x1bc+0x2]
    ▾ Entry 1 — protective, GPT protective (0xee), 2.0 MiB at LBA 1  [0x1be+0x10]
        Boot indicator: inactive (0x0)  [0x1be+0x1]
        First sector (CHS): 00 02 00  |...| — C/H/S 0/0/2  [0x1bf+0x3]
        Partition type: GPT protective (0xee)  [0x1c2+0x1]
        Last sector (CHS): 41 01 00  |A..| — C/H/S 0/65/1  [0x1c3+0x3]
        First sector (LBA): 1  [0x1c6+0x4]
        Sectors: 4095 — 2.0 MiB  [0x1ca+0x4]
      Entry 2: unused (0x0) — all zeros  [0x1ce+0x10]
      Entry 3: unused (0x0) — all zeros  [0x1de+0x10]
      Entry 4: unused (0x0) — all zeros  [0x1ee+0x10]
      Boot signature: 0xaa55  [0x1fe+0x2]
  ▾ GPT header — revision 1.0, 128 entries at LBA 2, usable LBA 34–4062  [0x200+0x200]
      Signature: "EFI PART"  [0x200+0x8]
      Revision: 0x10000 — 1.0  [0x208+0x4]
      Header size: 92  [0x20c+0x4]
      Header CRC32: 0x5c0276d6  [0x210+0x4]
      Reserved: 0  [0x214+0x4]
      This header's LBA: 1  [0x218+0x8]
      Alternate header's LBA: 4095  [0x220+0x8]
      First usable LBA: 34  [0x228+0x8]
      Last usable LBA: 4062  [0x230+0x8]
      Disk GUID: {11111111-2222-3333-4444-555555555555}  [0x238+0x10]
      Partition entries LBA: 2  [0x248+0x8]
      Number of partition entries: 128  [0x250+0x4]
      Size of a partition entry: 128  [0x254+0x4]
      Partition entries CRC32: 0x22d90cf6  [0x258+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x25c+0x1a4]
  ▾ Partition entries — 5 used of 128, 128 bytes each  [0x400+0x4000]
    ▾ Partition 1: EFI system — EFI System, 256.0 KiB at LBA 2048  [0x400+0x80]
      ▾ Entry  [0x400+0x80]
          Partition type GUID: {c12a7328-f81f-11d2-ba4b-00a0c93ec93b} — EFI System  [0x400+0x10]
          Unique partition GUID: {aaaaaaaa-0000-4000-8000-000000000001}  [0x410+0x10]
          First LBA: 2048  [0x420+0x8]
          Last LBA (inclusive): 2559  [0x428+0x8]
          Attributes: 0x0 []  [0x430+0x8]
          Partition name: "EFI system"  [0x438+0x48]
      ▾ Volume — FAT12 filesystem "ESP", 256.0 KiB, 500 clusters of 512 bytes  [0x100000+0x40000]
        ▾ Boot sector (BPB) — OEM "MTOO4048"  [0x100000+0x200]
            Jump instruction: eb 3c 90  |.<.|  [0x100000+0x3]
            OEM name: "MTOO4048"  [0x100003+0x8]
            Bytes per sector: 512  [0x10000b+0x2]
            Sectors per cluster: 1  [0x10000d+0x1]
            Reserved sectors: 1  [0x10000e+0x2]
            Number of FATs: 2  [0x100010+0x1]
            Root directory entries: 112  [0x100011+0x2]
            Total sectors (16-bit): 512  [0x100013+0x2]
            Media descriptor: removable (1.44 MB floppy and others) (0xf0)  [0x100015+0x1]
            Sectors per FAT (FAT12/16): 2  [0x100016+0x2]
            Sectors per track: 32  [0x100018+0x2]
            Heads: 16  [0x10001a+0x2]
            Hidden sectors: 0  [0x10001c+0x4]
            Total sectors (32-bit): 0  [0x100020+0x4]
        ▾ Extended BPB  [0x100024+0x1a]
            Drive number: 0x0  [0x100024+0x1]
            Reserved: 0  [0x100025+0x1]
            Extended boot signature: 0x29  [0x100026+0x1]
            Volume serial number: 0xe5f0e5f  [0x100027+0x4]
            Volume label: "ESP        "  [0x10002b+0xb]
            Filesystem type: "FAT12   "  [0x100036+0x8]
          Boot code — 448 bytes  [0x10003e+0x1c0]
          Boot signature: 0xaa55  [0x1001fe+0x2]
        ▾ FAT 1 — FAT12 entries  [0x100200+0x400]
            Entry 0: 0xff0 — the media descriptor, padded with ones  [0x100200+0x2]
            Entry 1: 0xfff — end of chain marker  [0x100201+0x2]
            Cluster 2: 0xfff — end of chain  [0x100203+0x2] → 0x101800+0x200
            Clusters 3–501: 0 — free  [0x100204+0x2ed]
            Unused — entries beyond the last cluster  [0x1004f1+0x10f]
          FAT 2 — copy  [0x100600+0x400]
        ▾ Root directory  [0x100a00+0xe00]
            Volume label: "ESP"  [0x100a00+0x20]
          ▾ hello.txt — 21 bytes, modified 2023-11-14 22:13:20  [0x100a20+0x20]
            ▾ Directory entry  [0x100a20+0x20]
                Short name: "HELLO.TXT"  [0x100a20+0xb]
                Attributes: 0x20 [ARCHIVE]  [0x100a2b+0x1]
                Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [0x100a2c+0x1]
                Creation time, 10 ms units: 0  [0x100a2d+0x1]
                Created: 2023-11-14 22:13:20 UTC  [0x100a2e+0x4]
                Accessed: 2023-11-14 00:00:00 UTC  [0x100a32+0x2]
                First cluster (high word): 0  [0x100a34+0x2]
                Modified: 2023-11-14 22:13:20 UTC  [0x100a36+0x4]
                First cluster (low word): 2  [0x100a3a+0x2]
                File size: 21 — 21 bytes  [0x100a3c+0x4]
            ▾ Clusters — contiguous, 21 bytes
                Fragment 0 — file offset 0x0, 21 bytes  [0x101800+0x15]
            ▾ Content — UTF-8 text, LF line endings, 1 line  [0x101800+0x15]
                Encoding: "UTF-8"
                Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
              ▾ Lines — 1 line  [0x101800+0x15]
                  Line 1: "hello from fillyfoal"  [0x101800+0x14]
            Unused entries — 110 free slots (end of directory)  [0x100a40+0xdc0]
          Data region — 250.0 KiB  [0x101800+0x3e800]
        ▾ Free clusters — from the FAT
            Clusters 3–501 — free, 249.5 KiB  [0x101a00+0x3e600]
    ▾ Partition 2: BIOS boot — BIOS boot, 128.0 KiB at LBA 34  [0x480+0x80]
      ▾ Entry  [0x480+0x80]
          Partition type GUID: {21686148-6449-6e6f-744e-656564454649} — BIOS boot  [0x480+0x10]
          Unique partition GUID: {aaaaaaaa-0000-4000-8000-000000000002}  [0x490+0x10]
          First LBA: 34  [0x4a0+0x8]
          Last LBA (inclusive): 289  [0x4a8+0x8]
          Attributes: 0x0 []  [0x4b0+0x8]
          Partition name: "BIOS boot"  [0x4b8+0x48]
      ▾ Volume  [0x4400+0x20000]
          ! unsupported: unrecognized format [0x4400+0x20000]
    ▾ Partition 3: root — Linux filesystem, 512.0 KiB at LBA 290  [0x500+0x80]
      ▾ Entry  [0x500+0x80]
          Partition type GUID: {0fc63daf-8483-4772-8e79-3d69d8477de4} — Linux filesystem  [0x500+0x10]
          Unique partition GUID: {aaaaaaaa-0000-4000-8000-000000000003}  [0x510+0x10]
          First LBA: 290  [0x520+0x8]
          Last LBA (inclusive): 1313  [0x528+0x8]
          Attributes: 0x4 [LEGACY_BIOS_BOOTABLE]  [0x530+0x8]
          Partition name: "root"  [0x538+0x48]
      ▾ Volume  [0x24400+0x80000]
          ! unsupported: unrecognized format [0x24400+0x80000]
    ▾ Partition 4: data — Microsoft basic data, 256.0 KiB at LBA 3200  [0x580+0x80]
      ▾ Entry  [0x580+0x80]
          Partition type GUID: {ebd0a0a2-b9e5-4433-87c0-68b6b72699c7} — Microsoft basic data  [0x580+0x10]
          Unique partition GUID: {aaaaaaaa-0000-4000-8000-000000000004}  [0x590+0x10]
          First LBA: 3200  [0x5a0+0x8]
          Last LBA (inclusive): 3711  [0x5a8+0x8]
          Attributes: 0x9000000000000000 [READ_ONLY (Microsoft) | NO_DRIVE_LETTER (Microsoft)]  [0x5b0+0x8]
          Partition name: "data"  [0x5b8+0x48]
      ▾ Volume  [0x190000+0x40000]
          ! unsupported: unrecognized format [0x190000+0x40000]
    ▾ Partition 5: swap — Linux swap, 367.0 KiB at LBA 1314  [0x600+0x80]
      ▾ Entry  [0x600+0x80]
          Partition type GUID: {0657fd6d-a4ab-43c4-84e5-0933c84b4f4f} — Linux swap  [0x600+0x10]
          Unique partition GUID: {aaaaaaaa-0000-4000-8000-000000000005}  [0x610+0x10]
          First LBA: 1314  [0x620+0x8]
          Last LBA (inclusive): 2047  [0x628+0x8]
          Attributes: 0x0 []  [0x630+0x8]
          Partition name: "swap"  [0x638+0x48]
      ▾ Volume  [0xa4400+0x5bc00]
          ! unsupported: unrecognized format [0xa4400+0x5bc00]
      Entries 6–128: unused (0x0)  [0x680+0x3d80]
    Backup partition entries — identical to the primary array  [0x1fbe00+0x4000]
  ▾ Backup GPT header — at LBA 4095, entries at LBA 4063  [0x1ffe00+0x200]
      Signature: "EFI PART"  [0x1ffe00+0x8]
      Revision: 0x10000 — 1.0  [0x1ffe08+0x4]
      Header size: 92  [0x1ffe0c+0x4]
      Header CRC32: 0xab7a5114  [0x1ffe10+0x4]
      Reserved: 0  [0x1ffe14+0x4]
      This header's LBA: 4095  [0x1ffe18+0x8]
      Alternate header's LBA: 1  [0x1ffe20+0x8]
      First usable LBA: 34  [0x1ffe28+0x8]
      Last usable LBA: 4062  [0x1ffe30+0x8]
      Disk GUID: {11111111-2222-3333-4444-555555555555}  [0x1ffe38+0x10]
      Partition entries LBA: 4063  [0x1ffe48+0x8]
      Number of partition entries: 128  [0x1ffe50+0x4]
      Size of a partition entry: 128  [0x1ffe54+0x4]
      Partition entries CRC32: 0x22d90cf6  [0x1ffe58+0x4]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1ffe5c+0x1a4]
  ▾ Disk layout — partitions and the space between them  [0x0+0x200000]
      Protective MBR — LBA 0, 512 bytes  [0x0+0x200]
      GPT header — LBA 1, 512 bytes  [0x200+0x200]
      Partition entries — LBA 2–33, 16.0 KiB  [0x400+0x4000]
      Partition 2: BIOS boot — LBA 34–289, 128.0 KiB  [0x4400+0x20000]
      Partition 3: Linux filesystem — LBA 290–1313, 512.0 KiB  [0x24400+0x80000]
      Partition 5: Linux swap — LBA 1314–2047, 367.0 KiB  [0xa4400+0x5bc00]
      Partition 1: EFI System — LBA 2048–2559, 256.0 KiB  [0x100000+0x40000]
      Unpartitioned space — LBA 2560–3199: 320.0 KiB, free space, all zeros  [0x140000+0x50000]
      Partition 4: Microsoft basic data — LBA 3200–3711, 256.0 KiB  [0x190000+0x40000]
      Unpartitioned space — LBA 3712–4062: 175.5 KiB, free space, all zeros  [0x1d0000+0x2be00]
      Backup partition entries — LBA 4063–4094, 16.0 KiB  [0x1fbe00+0x4000]
      Backup GPT header — LBA 4095, 512 bytes  [0x1ffe00+0x200]
